# wgc_capture

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: wgc_coreConfig.cmake.in
include/: fps_counter.hpp  frame_renderer.hpp  gpu_encoder.hpp  lock_free_queue.hpp  monitor_selector.hpp  py_capture.hpp  rgba_nv12_converter.hpp  rubber_band_box.hpp  wgc_core.hpp  window_selector.hpp
src/: gpu_encoder.cpp  py_capture.cpp  wgc_core.cpp
